objects/Product_Tracking__c.object
<CustomObject>
    <description>This object provides tracking information.</description>
    <fields>
        <fullName>Competitive_Comments__c</fullName>
        <inlineHelpText>Help text here.</inlineHelpText>
        <label>Competitive Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Commission_Explanation__c</fullName>
        <label>Consultant Commission Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Commission_Fee__c</fullName>
        <label>Consultant Commission- Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consultant_Commission_LOA__c</fullName>
        <label>Consultant : Letter Of Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consultant_Commission_Per_Script__c</fullName>
        <label>Consultant Commission- Per Script</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Commission__c</fullName>
        <label>Consultant Commission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Account Contact Roles:  Primary + Producer</description>
        <label>Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Tracking</relationshipLabel>
        <relationshipName>Product_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <formula>Opportunity_Product__r.Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Opportunity_Product__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Length_of_Quote__c</fullName>
        <formula>(Contract_End_Date__c  -  Contract_Effective_Date__c)</formula>
        <label>Contract : Length of Quote (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounts_Comments__c</fullName>
        <label>Discounts Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discounts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_List__c</fullName>
        <label>Drug List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Performance Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Paid__c</fullName>
        <label>How Paid ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Per Script</fullName>
                </value>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_Signed_on__c</fullName>
        <label>NDA : Signed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Networks__c</fullName>
        <label>Networks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional Select</fullName>
                </value>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Elite (Custom Only)</fullName>
                </value>
                <value>
                    <fullName>Advantage Plus (Renewal Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Disclosure_Agreement__c</fullName>
        <label>Non-Disclosure Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Product</label>
        <referenceTo>Opportunity_Product__c</referenceTo>
        <relationshipLabel>Product Tracking</relationshipLabel>
        <relationshipName>Product_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_PBM__c</fullName>
        <label>Other PBM</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBMCarrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PBM Carrier</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Competitor Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Tracking</relationshipLabel>
        <relationshipName>Product_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PBM_Carrier__c</fullName>
        <formula>Opportunity_Product__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBM Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebates_Comments__c</fullName>
        <label>Rebates Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rebates__c</fullName>
        <label>Rebates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Tracking</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Product Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Tracking</pluralLabel>
    <recordTypes>
        <fullName>Pharmacy_Tracking</fullName>
        <active>true</active>
        <label>Pharmacy Tracking</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Discounts_Comments_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Discounts__c, &apos;Yes&apos;), 
ISBLANK(Discounts_Comments__c))</errorConditionFormula>
        <errorDisplayField>Discounts_Comments__c</errorDisplayField>
        <errorMessage>Please enter Discounts Comments Information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rebates_Comments_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Rebates__c, &apos;Yes&apos;), 
ISBLANK(Rebates_Comments__c))</errorConditionFormula>
        <errorDisplayField>Rebates_Comments__c</errorDisplayField>
        <errorMessage>Please enter Rebates Comments Information</errorMessage>
    </validationRules>
</CustomObject>